public interface Visitor {
  public Node visitNode(Node p);
}
